--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
+@font-face {
+  font-family: 'Futura New Demi';
+  src: url('./assets/fonts/FuturaNewDemi-Reg.woff2') format('woff2'),
+      url('./assets/fonts/FuturaNewDemi-Reg.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+@font-face {
+  font-family: 'Futura New Book';
+  src: url('./assets/fonts/FuturaNewBook-Reg.woff2') format('woff2'),
+      url('./assets/fonts/FuturaNewBook-Reg.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+  font-display: swap;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+@font-face {
+  font-family: 'Futura New';
+  src: url('./assets/fonts/FuturaNewHeavy-Reg.woff2') format('woff2'),
+      url('./assets/fonts/FuturaNewHeavy-Reg.woff') format('woff');
+  font-weight: 900;
+  font-style: normal;
+  font-display: swap;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+@font-face {
+  font-family: 'Futura New';
+  src: url('./assets/fonts/FuturaNewMedium-Reg.woff2') format('woff2'),
+      url('./assets/fonts/FuturaNewMedium-Reg.woff') format('woff');
+  font-weight: 500;
+  font-style: normal;
+  font-display: swap;
 }
 
-.App-link {
-  color: #61dafb;
+*, *:before, *:after {
+  box-sizing: border-box;
+  scroll-behavior: smooth;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #EFEFEF;
+  font-family: 'Futura New', sans-serif;
+}
+
+.scheme {
+  width: 100%;
+  max-width: 1200px;
+  margin: 0 auto;
+  padding: 0 16px;
+}
+
+a {
+  text-decoration: none;
+}
+
+img {
+  max-width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+}
+
+h1, h2, p {
+  margin: 0;
 }
