--- a/src/App.css
+++ b/src/App.css
@@ -66,3 +66,40 @@ img {
 h1, h2, p {
   margin: 0;
 }
+
+ul {
+  margin: 0;
+}
+
+.tablet, 
+.desktop {
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .scheme {
+    padding: 0 30px;
+  }
+
+  .mobile {
+    display: none;
+  }
+
+  .tablet {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .scheme {
+    padding: 0;
+  }
+
+  .tablet {
+    display: none;
+  }
+
+  .desktop {
+    display: block;
+  }
+}
