Сверстаны все блоки сайта вместе с адаптивом

--- a/src/components/Desktop/Desktop.scss
+++ b/src/components/Desktop/Desktop.scss
@@ -72,6 +72,7 @@
         line-height: 100%;
         text-transform: uppercase;
         color: #D1253C;
+        padding-left: 20px;
       }
     }
   }
@@ -99,7 +100,7 @@
       border-radius: 35px;
       padding: 16px 25px;
       font-weight: 500;
-      font-size: 32px;
+      font-size: 30px;
       line-height: 100%;
       text-transform: uppercase;
       color: #D1253C;
