--- a/src/components/Tablet/Tablet.scss
+++ b/src/components/Tablet/Tablet.scss
@@ -66,6 +66,7 @@
         line-height: 100%;
         text-transform: uppercase;
         color: #D1253C;
+        padding-left: 10px;
       }
     }
   }
