--- a/src/components/Mobile/Mobile.scss
+++ b/src/components/Mobile/Mobile.scss
@@ -79,6 +79,7 @@
         line-height: 100%;
         text-transform: uppercase;
         color: #D1253C;
+        padding-left: 10px;
       }
     }
   }
